test(txns): implement transaction test runner
NODE-1374

--- a/test/functional/spec/transactions/auto-start.yml
+++ b/test/functional/spec/transactions/auto-start.yml
@@ -42,10 +42,13 @@ tests:
             documents:
               - _id: 1
             ordered: true
+            readConcern:
+              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
             stmtId: 0
+            startTransaction: true
             autocommit: false
             writeConcern:
           command_name: insert
@@ -57,6 +60,8 @@ tests:
             txnNumber:
               $numberLong: "1"
             stmtId: 1
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: commitTransaction
           database_name: admin
@@ -66,10 +71,14 @@ tests:
             documents:
               - _id: 2
             ordered: true
+            readConcern:
+              level: "snapshot"
+              afterClusterTime: 42
             lsid: session0
             txnNumber:
               $numberLong: "2"
             stmtId: 0
+            startTransaction: true
             autocommit: false
             writeConcern:
           command_name: insert
@@ -84,7 +93,8 @@ tests:
             txnNumber:
               $numberLong: "2"
             stmtId: 1
-            autocommit:
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: insert
           database_name: transaction-tests
@@ -95,6 +105,8 @@ tests:
             txnNumber:
               $numberLong: "2"
             stmtId: 2
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: commitTransaction
           database_name: admin
@@ -138,10 +150,13 @@ tests:
             documents:
               - _id: 1
             ordered: true
+            readConcern:
+              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
             stmtId: 0
+            startTransaction: true
             autocommit: false
             writeConcern:
           command_name: insert
@@ -153,6 +168,8 @@ tests:
             txnNumber:
               $numberLong: "1"
             stmtId: 1
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: commitTransaction
           database_name: admin
@@ -197,10 +214,13 @@ tests:
             documents:
               - _id: 1
             ordered: true
+            readConcern:
+              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
             stmtId: 0
+            startTransaction: true
             autocommit: false
             writeConcern:
           command_name: insert
@@ -212,6 +232,8 @@ tests:
             txnNumber:
               $numberLong: "1"
             stmtId: 1
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: abortTransaction
           database_name: admin
@@ -221,9 +243,13 @@ tests:
             documents:
               - _id: 2
             ordered: true
+            readConcern:
+              level: "snapshot"
+              afterClusterTime: 42
             txnNumber:
               $numberLong: "2"
             stmtId: 0
+            startTransaction: true
             autocommit: false
             writeConcern:
           command_name: insert
@@ -235,6 +261,8 @@ tests:
             txnNumber:
               $numberLong: "2"
             stmtId: 1
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: commitTransaction
           database_name: admin
@@ -279,10 +307,13 @@ tests:
             documents:
               - _id: 1
             ordered: true
+            readConcern:
+              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "2"
             stmtId: 0
+            startTransaction: true
             autocommit: false
             writeConcern:
           command_name: insert
@@ -294,6 +325,8 @@ tests:
             txnNumber:
               $numberLong: "2"
             stmtId: 1
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: commitTransaction
           database_name: admin
@@ -342,10 +375,13 @@ tests:
             documents:
               - _id: 1
             ordered: true
+            readConcern:
+              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
             stmtId: 0
+            startTransaction: true
             autocommit: false
             writeConcern:
           command_name: insert
@@ -358,6 +394,7 @@ tests:
             lsid: session1
             txnNumber:
             stmtId:
+            startTransaction:
             autocommit:
           command_name: find
           database_name: transaction-tests
@@ -368,6 +405,8 @@ tests:
             txnNumber:
               $numberLong: "1"
             stmtId: 1
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: commitTransaction
           database_name: admin
@@ -376,9 +415,12 @@ tests:
             find: test
             filter:
               _id: 1
+            readConcern:
+              afterClusterTime: 42
             lsid: session1
             txnNumber:
             stmtId:
+            startTransaction:
             autocommit:
           command_name: find
           database_name: transaction-tests
