--- a/test/functional/spec/transactions/bulk.yml
+++ b/test/functional/spec/transactions/bulk.yml
@@ -50,6 +50,9 @@ tests:
             - name: insertOne
               arguments:
                 document: {_id: 6}
+            - name: insertOne
+              arguments:
+                document: {_id: 7}
             # Keep replaces segregated from updates, so that drivers that aren't able to coalesce
             # adjacent updates and replaces into a single update command will still pass this test
             - name: replaceOne
@@ -66,15 +69,19 @@ tests:
             - name: deleteOne
               arguments:
                 filter: {_id: 4}
-            # TODO: awaiting server support
-            # - name: updateMany
-            # - name: deleteMany
+            - name: deleteMany
+              arguments:
+                filter: {_id: {$gte: 6}}
+            - name: updateMany
+              arguments:
+                filter: {_id: {$gte: 2}}
+                update: {$set: {z: 1}}
           session: session0
         result:
-          deletedCount: 2
-          insertedIds: {0: 1, 3: 3, 4: 4, 5: 5, 6: 6}
-          matchedCount: 3
-          modifiedCount: 3
+          deletedCount: 4
+          insertedIds: {0: 1, 3: 3, 4: 4, 5: 5, 6: 6, 7: 7}
+          matchedCount: 5
+          modifiedCount: 5
           upsertedCount: 1
           upsertedIds: {2: 2}
       - name: commitTransaction
@@ -88,10 +95,13 @@ tests:
             documents:
               - _id: 1
             ordered: true
+            readConcern:
+              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
             stmtId: 0
+            startTransaction: true
             autocommit: false
             writeConcern:
           command_name: insert
@@ -107,7 +117,8 @@ tests:
             txnNumber:
               $numberLong: "1"
             stmtId: 1
-            autocommit:
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: delete
           database_name: transaction-tests
@@ -122,7 +133,8 @@ tests:
             txnNumber:
               $numberLong: "1"
             stmtId: 2
-            autocommit:
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: insert
           database_name: transaction-tests
@@ -143,7 +155,8 @@ tests:
             txnNumber:
               $numberLong: "1"
             stmtId: 3
-            autocommit:
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: update
           database_name: transaction-tests
@@ -155,12 +168,14 @@ tests:
               - _id: 4
               - _id: 5
               - _id: 6
+              - _id: 7
             ordered: true
             lsid: session0
             txnNumber:
               $numberLong: "1"
             stmtId: 5
-            autocommit:
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: insert
           database_name: transaction-tests
@@ -180,8 +195,9 @@ tests:
             lsid: session0
             txnNumber:
               $numberLong: "1"
-            stmtId: 9
-            autocommit:
+            stmtId: 10
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: update
           database_name: transaction-tests
@@ -193,14 +209,35 @@ tests:
                 limit: 1
               - q: {_id: 4}
                 limit: 1
+              - q: {_id: {$gte: 6}}
+                limit: 0
             ordered: true
             lsid: session0
             txnNumber:
               $numberLong: "1"
-            stmtId: 11
-            autocommit:
+            stmtId: 12
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: delete
+          database_name: transaction-tests
+      - command_started_event:
+          command:
+            update: test
+            updates:
+              - q: {_id: {$gte: 2}}
+                u: {$set: {z: 1}}
+                multi: true
+                upsert: false
+            ordered: true
+            lsid: session0
+            txnNumber:
+              $numberLong: "1"
+            stmtId: 15
+            startTransaction:
+            autocommit: false
+            writeConcern:
+          command_name: update
           database_name: transaction-tests
       - command_started_event:
           command:
@@ -208,7 +245,9 @@ tests:
             lsid: session0
             txnNumber:
               $numberLong: "1"
-            stmtId: 13
+            stmtId: 16
+            startTransaction:
+            autocommit: false
             writeConcern:
           command_name: commitTransaction
           database_name: admin
@@ -217,6 +256,5 @@ tests:
       collection:
         data:
           - {_id: 1, y: 1}
-          - {_id: 2, y: 2}
-          - {_id: 5}
-          - {_id: 6}
+          - {_id: 2, y: 2, z: 1}
+          - {_id: 5, z: 1}
