--- a/test/functional/spec/transactions/findOneAndReplace.yml
+++ b/test/functional/spec/transactions/findOneAndReplace.yml
@@ -2,37 +2,29 @@ data:
   - _id: 1
   - _id: 2
   - _id: 3
-  - _id: 4
-  - _id: 5
 
 tests:
-  - description: delete
+  - description: findOneAndReplace
 
     operations:
       - name: startTransaction
         arguments:
           session: session0
-      - name: deleteOne
+      - name: findOneAndReplace
         arguments:
-          filter:
-            _id: 1
+          filter: {_id: 3}
+          replacement: {x: 1}
+          returnDocument: Before
           session: session0
-        result:
-          deletedCount: 1
-      - name: deleteMany
+        result: {_id: 3}
+      - name: findOneAndReplace
         arguments:
-          filter:
-            _id: {$lte: 3}
+          filter: {_id: 4}
+          replacement: {x: 1}
+          upsert: true
+          returnDocument: After
           session: session0
-        result:
-          deletedCount: 2
-      - name: deleteOne
-        arguments:
-          filter:
-            _id: 4
-          session: session0
-        result:
-          deletedCount: 1
+        result: {_id: 4, x: 1}
       - name: commitTransaction
         arguments:
           session: session0
@@ -40,53 +32,37 @@ tests:
     expectations:
       - command_started_event:
           command:
-            delete: test
-            deletes:
-              - q: {_id: 1}
-                limit: 1
-            ordered: true
-            readConcern:
-              level: "snapshot"
+            findAndModify: test
+            query: {_id: 3}
+            update: {x: 1}
+            new: false
             lsid: session0
             txnNumber:
               $numberLong: "1"
             stmtId: 0
             startTransaction: true
             autocommit: false
+            readConcern:
+              level: "snapshot"
             writeConcern:
-          command_name: delete
+          command_name: findAndModify
           database_name: transaction-tests
       - command_started_event:
           command:
-            delete: test
-            deletes:
-              - q: {_id: {$lte: 3}}
-                limit: 0
-            ordered: true
+            findAndModify: test
+            query: {_id: 4}
+            update: {x: 1}
+            new: true
+            upsert: true
             lsid: session0
             txnNumber:
               $numberLong: "1"
             stmtId: 1
             startTransaction:
             autocommit: false
+            readConcern:
             writeConcern:
-          command_name: delete
-          database_name: transaction-tests
-      - command_started_event:
-          command:
-            delete: test
-            deletes:
-              - q: {_id: 4}
-                limit: 1
-            ordered: true
-            lsid: session0
-            txnNumber:
-              $numberLong: "1"
-            stmtId: 2
-            startTransaction:
-            autocommit: false
-            writeConcern:
-          command_name: delete
+          command_name: findAndModify
           database_name: transaction-tests
       - command_started_event:
           command:
@@ -94,9 +70,10 @@ tests:
             lsid: session0
             txnNumber:
               $numberLong: "1"
-            stmtId: 3
+            stmtId: 2
             startTransaction:
             autocommit: false
+            readConcern:
             writeConcern:
           command_name: commitTransaction
           database_name: admin
@@ -104,4 +81,7 @@ tests:
     outcome:
       collection:
         data:
-          - _id: 5
+          - {_id: 1}
+          - {_id: 2}
+          - {_id: 3, x: 1}
+          - {_id: 4, x: 1}
