--- a/test/functional/spec/transactions/retryable-writes.yml
+++ b/test/functional/spec/transactions/retryable-writes.yml
@@ -1,7 +1,10 @@
 data: []
 
 tests:
-  - description: insert
+  - description: increment txnNumber
+
+    clientOptions:
+      retryWrites: true
 
     operations:
       - name: startTransaction
@@ -14,37 +17,40 @@ tests:
           session: session0
         result:
           insertedId: 1
-      - name: insertMany
-        arguments:
-          documents:
-            - _id: 2
-            - _id: 3
-          session: session0
-        result:
-          insertedIds: {0: 2, 1: 3}
-      - name: insertOne
-        arguments:
-          document:
-            _id: 4
-          session: session0
-        result:
-          insertedId: 4
       - name: commitTransaction
         arguments:
           session: session0
+      # Retryable write should include the next txnNumber
+      - name: insertOne
+        arguments:
+          document:
+            _id: 2
+          session: session0
+        result:
+          insertedId: 2
+      # Next transaction should include the next txnNumber
       - name: startTransaction
         arguments:
           session: session0
       - name: insertOne
         arguments:
           document:
-            _id: 5
+            _id: 3
           session: session0
         result:
-          insertedId: 5
-      - name: commitTransaction
+          insertedId: 3
+      - name: abortTransaction
         arguments:
           session: session0
+      # Retryable write should include the next txnNumber
+      - name: insertMany
+        arguments:
+          documents:
+            - _id: 4
+            - _id: 5
+          session: session0
+        result:
+          insertedIds: {0: 4, 1: 5}
 
     expectations:
       - command_started_event:
@@ -66,41 +72,11 @@ tests:
           database_name: transaction-tests
       - command_started_event:
           command:
-            insert: test
-            documents:
-              - _id: 2
-              - _id: 3
-            ordered: true
-            lsid: session0
-            txnNumber:
-              $numberLong: "1"
-            stmtId: 1
-            startTransaction:
-            autocommit: false
-            writeConcern:
-          command_name: insert
-          database_name: transaction-tests
-      - command_started_event:
-          command:
-            insert: test
-            documents:
-              - _id: 4
-            ordered: true
-            lsid: session0
-            txnNumber:
-              $numberLong: "1"
-            stmtId: 3 # Skip statement id 2.
-            autocommit: false
-            writeConcern:
-          command_name: insert
-          database_name: transaction-tests
-      - command_started_event:
-          command:
             commitTransaction: 1
             lsid: session0
             txnNumber:
               $numberLong: "1"
-            stmtId: 4
+            stmtId: 1
             startTransaction:
             autocommit: false
             writeConcern:
@@ -110,14 +86,30 @@ tests:
           command:
             insert: test
             documents:
-              - _id: 5
+              - _id: 2
+            ordered: true
+            readConcern:
+            lsid: session0
+            txnNumber:
+              $numberLong: "2"
+            stmtId:
+            startTransaction:
+            autocommit:
+            writeConcern:
+          command_name: insert
+          database_name: transaction-tests
+      - command_started_event:
+          command:
+            insert: test
+            documents:
+              - _id: 3
             ordered: true
             readConcern:
               level: "snapshot"
               afterClusterTime: 42
             lsid: session0
             txnNumber:
-              $numberLong: "2"
+              $numberLong: "3"
             stmtId: 0
             startTransaction: true
             autocommit: false
@@ -126,22 +118,38 @@ tests:
           database_name: transaction-tests
       - command_started_event:
           command:
-            commitTransaction: 1
+            abortTransaction: 1
             lsid: session0
             txnNumber:
-              $numberLong: "2"
+              $numberLong: "3"
             stmtId: 1
             startTransaction:
             autocommit: false
             writeConcern:
-          command_name: commitTransaction
+          command_name: abortTransaction
           database_name: admin
+      - command_started_event:
+          command:
+            insert: test
+            documents:
+              - _id: 4
+              - _id: 5
+            ordered: true
+            readConcern:
+            lsid: session0
+            txnNumber:
+              $numberLong: "4"
+            stmtId:
+            startTransaction:
+            autocommit:
+            writeConcern:
+          command_name: insert
+          database_name: transaction-tests
 
     outcome:
       collection:
         data:
           - _id: 1
           - _id: 2
-          - _id: 3
           - _id: 4
           - _id: 5
