test(txns): only run transactions tests on 3.7.x+ replicaset/mongos

--- a/test/functional/spec/transactions/delete.yml
+++ b/test/functional/spec/transactions/delete.yml
@@ -46,7 +46,6 @@ tests:
                 limit: 1
             ordered: true
             readConcern:
-              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
@@ -111,8 +110,9 @@ tests:
       - name: startTransaction
         arguments:
           session: session0
-          writeConcern:
-            w: majority
+          options:
+            writeConcern:
+              w: majority
       - name: deleteOne
         arguments:
           filter:
@@ -144,7 +144,6 @@ tests:
                 limit: 1
             ordered: true
             readConcern:
-              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
