--- a/test/functional/spec/transactions/findOneAndReplace.yml
+++ b/test/functional/spec/transactions/findOneAndReplace.yml
@@ -43,7 +43,6 @@ tests:
             startTransaction: true
             autocommit: false
             readConcern:
-              level: "snapshot"
             writeConcern:
           command_name: findAndModify
           database_name: transaction-tests
@@ -92,8 +91,9 @@ tests:
       - name: startTransaction
         arguments:
           session: session0
-          writeConcern:
-            w: majority
+          options:
+            writeConcern:
+              w: majority
       - name: findOneAndReplace
         arguments:
           filter: {_id: 3}
@@ -121,7 +121,6 @@ tests:
             startTransaction: true
             autocommit: false
             readConcern:
-              level: "snapshot"
             writeConcern:
           command_name: findAndModify
           database_name: transaction-tests
