--- a/test/functional/spec/transactions/bulk.yml
+++ b/test/functional/spec/transactions/bulk.yml
@@ -96,7 +96,6 @@ tests:
               - _id: 1
             ordered: true
             readConcern:
-              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
@@ -265,8 +264,9 @@ tests:
       - name: startTransaction
         arguments:
           session: session0
-          writeConcern:
-            w: majority
+          options:
+            writeConcern:
+              w: majority
       - name: bulkWrite
         arguments:
           requests:
@@ -295,7 +295,6 @@ tests:
               - _id: 1
             ordered: true
             readConcern:
-              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
