--- a/test/functional/spec/transactions/findOneAndDelete.yml
+++ b/test/functional/spec/transactions/findOneAndDelete.yml
@@ -37,7 +37,6 @@ tests:
             startTransaction: true
             autocommit: false
             readConcern:
-              level: "snapshot"
             writeConcern:
           command_name: findAndModify
           database_name: transaction-tests
@@ -82,8 +81,9 @@ tests:
       - name: startTransaction
         arguments:
           session: session0
-          writeConcern:
-            w: majority
+          options:
+            writeConcern:
+              w: majority
       - name: findOneAndDelete
         arguments:
           filter: {_id: 3}
@@ -108,7 +108,6 @@ tests:
             startTransaction: true
             autocommit: false
             readConcern:
-              level: "snapshot"
             writeConcern:
           command_name: findAndModify
           database_name: transaction-tests
