--- a/test/functional/spec/transactions/findOneAndUpdate.yml
+++ b/test/functional/spec/transactions/findOneAndUpdate.yml
@@ -75,7 +75,6 @@ tests:
             startTransaction: true
             autocommit: false
             readConcern:
-              level: "snapshot"
             writeConcern:
           command_name: findAndModify
           database_name: transaction-tests
@@ -122,7 +121,6 @@ tests:
             startTransaction: true
             autocommit: false
             readConcern:
-              level: "snapshot"
               afterClusterTime: 42
             writeConcern:
           command_name: findAndModify
@@ -153,7 +151,6 @@ tests:
             startTransaction: true
             autocommit: false
             readConcern:
-              level: "snapshot"
               afterClusterTime: 42
             writeConcern:
           command_name: findAndModify
@@ -186,8 +183,9 @@ tests:
       - name: startTransaction
         arguments:
           session: session0
-          writeConcern:
-            w: majority
+          options:
+            writeConcern:
+              w: majority
       - name: findOneAndUpdate
         arguments:
           filter: {_id: 3}
@@ -217,7 +215,6 @@ tests:
             startTransaction: true
             autocommit: false
             readConcern:
-              level: "snapshot"
             writeConcern:
           command_name: findAndModify
           database_name: transaction-tests
