--- a/test/functional/spec/transactions/insert.yml
+++ b/test/functional/spec/transactions/insert.yml
@@ -54,7 +54,6 @@ tests:
               - _id: 1
             ordered: true
             readConcern:
-              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
@@ -113,7 +112,6 @@ tests:
               - _id: 5
             ordered: true
             readConcern:
-              level: "snapshot"
               afterClusterTime: 42
             lsid: session0
             txnNumber:
@@ -151,8 +149,9 @@ tests:
       - name: startTransaction
         arguments:
           session: session0
-          writeConcern:
-            w: majority
+          options:
+            writeConcern:
+              w: majority
       - name: insertOne
         arguments:
           document:
@@ -184,7 +183,6 @@ tests:
               - _id: 1
             ordered: true
             readConcern:
-              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
