--- a/test/functional/spec/transactions/update.yml
+++ b/test/functional/spec/transactions/update.yml
@@ -57,7 +57,6 @@ tests:
                 upsert: true
             ordered: true
             readConcern:
-              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
@@ -130,8 +129,9 @@ tests:
       - name: startTransaction
         arguments:
           session: session0
-          writeConcern:
-            w: majority         
+          options:
+            writeConcern:
+              w: majority
       - name: updateOne
         arguments:
           filter: {_id: 4}
@@ -139,7 +139,7 @@ tests:
             $inc: {x: 1}
           upsert: true
           writeConcern:
-            w: majority         
+            w: majority
           session: session0
         result:
           matchedCount: 0
@@ -151,7 +151,7 @@ tests:
           filter: {x: 1}
           replacement: {y: 1}
           writeConcern:
-            w: majority         
+            w: majority
           session: session0
         result:
           matchedCount: 1
@@ -164,7 +164,7 @@ tests:
           update:
             $set: {z: 1}
           writeConcern:
-            w: majority         
+            w: majority
           session: session0
         result:
           matchedCount: 2
@@ -185,7 +185,6 @@ tests:
                 upsert: true
             ordered: true
             readConcern:
-              level: "snapshot"
             lsid: session0
             txnNumber:
               $numberLong: "1"
@@ -241,6 +240,6 @@ tests:
             startTransaction:
             autocommit: false
             writeConcern:
-              w: majority         
+              w: majority
           command_name: commitTransaction
           database_name: admin
