--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "official"
   ],
   "dependencies": {
-    "mongodb-core": "3.0.6"
+    "mongodb-core": "mongodb-js/mongodb-core#master"
   },
   "devDependencies": {
     "bluebird": "3.5.0",
